# rc_2026

./: README.md
autocar/: camera_api.py
autocar/pop/: a01_array.py  a02.py  a04.py  test.py
numpy/: a05_where.py  a06_static.py  a07_save_load.py  a08_save_load.py  random.npy  random.npy.npz  random.npz  random.txt
opencv_python/: a01_imshow_test.py
pandas_ex/: a02_dataframe.py  a04_data_add.py  a05_drop.py  a07_save_load_csv.py
python/: a00_default.py  a01_hello.py  a04_hello.py  a05_hello.py  a101_wrapper_function.py  a102_closure.py  a103_time_decorator.py  a104_multithread.py  a104_sys.py  a105_os.py  a106_url.py  a15_comparison_operator.py  a17_datetime2.py  a19_tuple.py  a20_odd_elif.py  a21_list.py  a22_list_method.py  a23_list_method2.py  a24_range_enumerate.py  a25_dirctory.py  a26_webview.py  a27_while_loop.py  a28_time_module.py  a29_break_continue.py  a30_funtion.py  a31_variable_length_argument.py  a33_default_argument.py  a35_keyward_argument.py  a36_recursive.py  a39_argument_funcion.py  a40_lambda_funcion.py  a42_file_write.py  a43_file_read.py  a44_generator.py  a45_literable.py  a47_try_except.py  a54_exception_custom.py  a61_class_dictinary.py  a62_class_make_student.py  a64_class_student.py  (+13 more)
python/test_package/: __init__.py  module_a.py  module_b.py
rc_car_project/: main.py  pyproject.toml
rc_car_project/backend/: battery.py  control.py  distance.py  server.py
rc_car_project/frontend/: app.js  index.html  style.css
uv_test/: note.py  note.txt
uv_test/click/frontend/: main.py
