[project]
name = "rc-car-project"
version = "0.1.0"
description = "RC Car Controller using Flask and PyWebView"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "pywebview",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
