[project]
name = "rc-car-project"
version = "0.1.0"
description = "RC Car Controller using Flask and PyWebView"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "pyqt5>=5.15.11",
    "pyqtwebengine>=5.15.7",
    "pywebview",
    "qtpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
